objects/WT_Auto_Provisioned_Blocked_User__c.object
<CustomObject>
    <fields>
        <fullName>WT_Date_Blocked__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Blocked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Date_Released__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Released</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Released_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Released By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Auto_Provisioned_Blocked_Users1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Auto_Provisioned_Blocked_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Auto Provisioned Blocked User</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto Provisioned Blocked User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto Provisioned Blocked Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>